# dpo

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
configs/: default_profile.yaml
configs/policies/: default_policy.yaml  strict_policy.yaml
docs/examples/: ci_preflight_databricks_auth.sh  pre-commit-hooks.yaml
notebooks/: 01_discovery_demo.py  02_full_orchestration.py  03_alerting_setup.py  04_profile_types_demo.py  05_bulk_provisioning.py  06_monitor_groups_demo.py
src/dpo/: __init__.py  __main__.py  aggregator.py  alerting.py  cli.py  config.py  coverage.py  dashboard.py  discovery.py  naming.py  planning.py  provisioning.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_alerting.py  test_cli.py  test_config.py  test_coverage.py  test_dashboard.py  test_discovery.py  test_main.py  test_orchestration.py  test_planning.py  test_provisioning.py  test_provisioning_status.py  test_utils.py  test_validators.py
