[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-dpo"
version = "0.3.0rc1"
description = "Data Profiling Orchestrator - Automate Databricks Data Profiling at scale"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Databricks Solution Accelerators"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "databricks-sdk==0.88.0",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "tenacity==9.1.4",
    "tabulate==0.9.0",
    "click==8.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
    "black==26.1.0",
    "ruff==0.15.1",
]

[project.scripts]
dpo = "dpo.cli:main"

[project.urls]
"Homepage" = "https://github.com/databricks/solution-accelerators"
"Bug Tracker" = "https://github.com/databricks/solution-accelerators/issues"
"Changelog" = "https://github.com/databricks/solution-accelerators/blob/main/DPO/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dpo*"]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 120
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
